# algorand_ai_contract_creator

./: .algokit.toml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  algorand_ai_contract_creator.code-workspace  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
algorand-ai-contract-creator/.github/workflows/: algorand-ai-contract-creator-cd.yaml
algorand-ai-contract-creator/projects/algorand-ai-contract-creator/: .algokit.toml  pyproject.toml
algorand-ai-contract-creator/projects/algorand-ai-contract-creator/.tours/: getting-started-with-your-algokit-project.tour
algorand-ai-contract-creator/projects/algorand-ai-contract-creator/algorand-ai-contract-creator/: .algokit.toml  .gitignore  README.md  __init__.py  fix_model.bat  install.bat  pyproject.toml  requirements.txt  run.bat  setup.py
algorand-ai-contract-creator/projects/algorand-ai-contract-creator/tests/: algorand_ai_contract_creator_client_test.py  algorand_ai_contract_creator_test.py
scripts/: fix_model.bat  install.bat  install.sh  run.bat  run.sh
src/algorand_ai_contractor/: __init__.py
src/algorand_ai_contractor/contracts/: __init__.py  config.py
src/algorand_ai_contractor/core/: __init__.py  ai_engine.py  algorand_utils.py
src/algorand_ai_contractor/ui/: __init__.py  streamlit_app.py
test_123/test_123/: README.md  algorand-ai-contract-creator.code-workspace
test_123/test_123/.github/workflows/: algorand-ai-contract-creator-ci.yaml
test_123/test_123/projects/algorand-ai-contract-creator/: README.md
tests/: test_contracts.py
(+22 files in other folders)
